--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -134,7 +134,7 @@ nav{
 /* mobile only */
 @media screen and (max-width: 580px) {
     .nav-btn {
-        
-        border-radius: 50%;
+        padding: 0;
+        margin-bottom: 1.5rem;
     }
 }
